# pest-sense

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 369ff0e1c058_create_weather_records_table.py
app/: main.py
app/api/: dependencies.py
app/api/v1/: router.py
app/application/: __init__.py  current_analysis.py  validation_workflow.py
app/application/workflows/: __init__.py  forecast_engine.py
app/bootstrap/: __init__.py  application.py  profiles.py  startup.py
app/core/: __init__.py  container.py  settings.py
app/domain/climate/: __init__.py  climate_engine.py
app/domain/crop/: __init__.py  engine.py
app/domain/inference/: __init__.py  contracts.py  current_state_engine.py
app/domain/pest/: __init__.py  engine.py
app/domain/recommendation/: __init__.py  engine.py
app/domain/risk/: __init__.py  engine.py
app/domain/shared/: __init__.py  contracts.py
app/domain/suitability/: __init__.py  engine.py
app/domain/validation/: __init__.py  engine.py  models.py
app/infrastructure/weather/: exceptions.py
app/profiles/: __init__.py  contracts.py  loader.py  parsers.py  registry.py  resolver.py  response.json
app/profiles/crops/: cotton.json
app/profiles/pests/: aphids.json  jassid.json  mealybug.json  pink_bollworm.json  thrips.json  whitefly.json
app/profiles/regions/: khanpur.json
app/profiles/treatments/: whitefly_scouting.json  (+2 more)
app/scripts/: __init__.py  run_current_simulation.py  run_forecast_simulation.py
knowledge/: helper_commands.txt
tests/: test_forecast_simulation.py  test_mvp_foundation.py
(+90 files in other folders)
