[project]
name = "pest-sense"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.2.13",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.39.0",
]
